<resources>
    <string name="app_name">Reddit Client</string>

    <string name="subtitle">%1$s · %2$s · %3$s</string>

    <plurals name="points">
        <item quantity="one">%1$d point</item>
        <item quantity="other">%1$d points</item>
    </plurals>

    <plurals name="comments">
        <item quantity="one">%1$d comment</item>
        <item quantity="other">%1$d comments</item>
    </plurals>

    <plurals name="children">
        <item quantity="one">%d more comment</item>
        <item quantity="other">%d more comments</item>
    </plurals>

    <string name="score">%1$s\n%2$s</string>

    <!-- Post overflow titles -->
    <string name="action_post_share">Share</string>
    <string name="action_post_browser">Open in Browser</string>
    <string name="action_post_report">Report</string>

    <string name="notify_post_hidden">Hidden</string>
    <string name="notify_post_hidden_undo">Undo</string>

    <string name="post_nsfw">NSFW</string>
    <string name="post_stickied">Stickied</string>

    <string name="post_content_description_upvote">Upvote</string>
    <string name="post_content_description_downvote">Downvote</string>
    <string name="post_content_description_save">Save</string>
    <string name="post_content_description_other">More</string>
    <string name="post_content_description_media_image">Post image</string>

    <string name="profile_link_karma">Link karma</string>
    <string name="profile_comment_karma">Comment karma</string>

    <string name="action_filter">Filter</string>

    <!-- Sort overflow titles -->
    <string name="action_sort">Sort</string>

    <string name="action_sort_hot">Hot</string>
    <string name="action_sort_new">New</string>
    <string name="action_sort_rising">Rising</string>
    <string name="action_sort_controversial">Controversial</string>
    <string name="action_sort_top">Top</string>

    <string name="action_sort_time_period_hour">Hour</string>
    <string name="action_sort_time_period_day">Day</string>
    <string name="action_sort_time_period_week">Week</string>
    <string name="action_sort_time_period_month">Month</string>
    <string name="action_sort_time_period_year">Year</string>
    <string name="action_sort_time_period_all">All</string>
    <!-- -->

    <string name="action_account">Account</string>
    <string name="action_account_add">Add Account</string>

    <string name="score_hidden">[score hidden]</string>
    <string name="login_aborted">To log in, allow Reddit Client to connect to your account</string>

    <string name="filter_form_subreddit">Subreddit</string>

    <string name="filter_form_username">Username</string>
    <string name="filter_form_comments">Comments</string>
    <string name="filter_form_submitted">Submitted</string>
    <string name="filter_form_gilded">Gilded</string>
</resources>
