<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/action_account"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/action_account_add"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/action_account_add"/>

        </menu>

    </item>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/action_sort_hot"
                android:title="@string/action_sort_hot"/>

            <item
                android:id="@+id/action_sort_new"
                android:title="@string/action_sort_new"/>

            <item
                android:id="@+id/action_sort_rising"
                android:title="@string/action_sort_rising"/>

            <item
                android:id="@+id/action_sort_controversial"
                android:title="@string/action_sort_controversial"/>

            <item
                android:id="@+id/action_sort_top"
                android:title="@string/action_sort_top"/>

        </menu>

    </item>

</menu>
