<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:id="@+id/post_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/post_horizontal_margin"
            android:paddingRight="@dimen/post_horizontal_margin"
            android:paddingTop="24dp"
            tools:text="This is Carter. He knocked on my door to ask if he could have a banana then left."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/post_horizontal_margin"
            android:paddingRight="@dimen/post_horizontal_margin"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/post_score"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                tools:text="29471 points\n2992 comments"/>

            <ToggleButton
                android:id="@+id/post_upvote"
                style="@style/ImageToggleButton"
                android:contentDescription="@string/post_content_description_upvote"
                android:drawableTop="@drawable/ic_arrow_upward_black_24dp"/>

            <ToggleButton
                android:id="@+id/post_downvote"
                style="@style/ImageToggleButton"
                android:contentDescription="@string/post_content_description_downvote"
                android:drawableTop="@drawable/ic_arrow_downward_black_24dp"/>

            <ToggleButton
                android:id="@+id/post_save"
                style="@style/ImageToggleButton"
                android:contentDescription="@string/post_content_description_save"
                android:drawableTop="@drawable/ic_bookmark_black_24dp"/>

            <ImageButton
                android:id="@+id/post_other"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/post_content_description_other"
                app:srcCompat="@drawable/ic_more_vert_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
